rsworkspace/crates/trogon-eventsourcing/tests/ui/fail/double_when.stderr
error[E0599]: no method named `when` found for struct `TestCase<TestCommand, When<TestEvent, TestState, TestCommand>>` in the current scope
  --> tests/ui/fail/double_when.rs:12:10
   |
 9 |       TestCase::new(decider::<TestCommand>())
   |       ---------------------------------------
   |       |
   |  _____method `when` is available on `TestCase<TestCommand>`
   | |
10 | |         .given([])
   | |          --------- method `when` is available on `TestCase<TestCommand, Given<TestEvent>>`
11 | |         .when(TestCommand)
12 | |         .when(TestCommand);
   | |_________-^^^^
   |
help: there is a method `then` with a similar name
   |
12 -         .when(TestCommand);
12 +         .then(TestCommand);
   |
